--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 .game-board {
-  width: 100%;
-  height: 400px;
+  width: 100vw;
+  height: 50vh;
   box-shadow: inset 3px 3px 7px #000000b8;
   margin: 0 auto;
   margin-top: 0;
@@ -62,6 +62,8 @@ body {
     text-shadow: 1px 1px 2px #f8c400a9;
     font-weight: bold;
     font-size: 12px;
+    width: 100vw;
+    height: 13vh;
 }
 
 .timer {
@@ -141,8 +143,8 @@ body {
   display: block;
   margin: auto;
   margin-bottom: 0;
-  width: 80%;
-  height: 200px;
+  width: 80vw;
+  height: 20vh;
 }
 
 .minimario {
@@ -156,6 +158,7 @@ body {
   bottom: 0;
   text-align: center;
   padding: 10px 0;
-  width: 100%;
+  width: 100vw;
+  height: 3vh;
   font-size: 0.2em;
 }
