--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .pipe {
   position: absolute;
   bottom: 0;
-  width: 50px;
+  width: 100px;
 }
 
 .pipe-activy {
@@ -37,7 +37,7 @@ body {
 .mario {
   position: absolute;
   bottom: 0;
-  width: 120px;
+  width: 250px;
 }
 
 .jump {
@@ -45,9 +45,9 @@ body {
 }
 
 .clouds {
-  margin-top: 30px;
+  margin-top: 120px;
   position: absolute;
-  width: 350px;
+  width: 700px;
   animation: clouds-animation 20s infinite linear;
 }
 
@@ -61,7 +61,7 @@ body {
     color: #f8c400;
     text-shadow: 1px 1px 2px #f8c400a9;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 30px;
     width: 100vw;
     height: 13vh;
 }
@@ -70,12 +70,20 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-left: 30px;
 }
 
 .bestScore {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-right: 40px;
+}
+
+.linha {
+  border: none;
+  border: 1px solid #f8c400a9;
+  padding: 0;
 }
 
 @keyframes pipe-animation {
@@ -92,13 +100,13 @@ body {
     bottom: 0;
   }
   40% {
-    bottom: 140px;
+    bottom: 300px;
   }
   50% {
-    bottom: 140px;
+    bottom: 300px;
   }
   60% {
-    bottom: 140px;
+    bottom: 300px;
   }
   100% {
     bottom: 0;
@@ -148,7 +156,11 @@ body {
 }
 
 .minimario {
-  width: 40px;
+  width: 120px;
+}
+
+footer {
+  display: flex;
 }
 
 .footer {
@@ -156,9 +168,10 @@ body {
   color: white;
   position: fixed;
   bottom: 0;
-  text-align: center;
-  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100vw;
   height: 3vh;
-  font-size: 0.5em;
-  }
+  font-size: 0.9em;
+}
